[gd_scene load_steps=3 format=3 uid="uid://cufhu4ddxgjmf"]

[ext_resource type="Script" path="res://scenes/ui/level_up_celebration.gd" id="1_script"]
[ext_resource type="FontFile" path="res://assets/fonts/monogram.ttf" id="2_font"]

[node name="LevelUpCelebration" type="CanvasLayer"]
layer = 101
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.7)

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(400, 200)

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/Panel"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="HBox" type="HBoxContainer" parent="CenterContainer/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="PortraitPanel" type="PanelContainer" parent="CenterContainer/Panel/MarginContainer/HBox"]
custom_minimum_size = Vector2(96, 96)
layout_mode = 2

[node name="Portrait" type="TextureRect" parent="CenterContainer/Panel/MarginContainer/HBox/PortraitPanel"]
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="StatsVBox" type="VBoxContainer" parent="CenterContainer/Panel/MarginContainer/HBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="NameLabel" type="Label" parent="CenterContainer/Panel/MarginContainer/HBox/StatsVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 32
text = "Character Name"

[node name="LevelLabel" type="Label" parent="CenterContainer/Panel/MarginContainer/HBox/StatsVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.843137, 0, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 32
text = "LEVEL UP!"
horizontal_alignment = 1

[node name="StatsContainer" type="VBoxContainer" parent="CenterContainer/Panel/MarginContainer/HBox/StatsVBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 4

[node name="AbilitiesContainer" type="VBoxContainer" parent="CenterContainer/Panel/MarginContainer/HBox/StatsVBox"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="ContinueLabel" type="Label" parent="CenterContainer/Panel/MarginContainer/HBox/StatsVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 16
text = "Press Z to continue"
horizontal_alignment = 1
